crates/swc_ecma_parser/tests/errors/issue-8269/input.js
{
    let let
}
{
    const let = 0
}
{
    class let { }
}